--- a/src/main/resources/templates/admin/admin-dashboard.html
+++ b/src/main/resources/templates/admin/admin-dashboard.html
@@ -52,14 +52,15 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
-        <aside class="col-2 sidebar">
-            <h2>DevCollab</h2>
-            <ul>
-                <li><a href="#" class="active">Dashboard</a></li>
-                <li><a th:href="@{/admin/manage}">User Management</a></li>
-                <li><a href="#">Reported Project</a></li>
-                <li><a href="#">Performance</a></li>
-                <li><a href="#">Settings</a></li>
+        <aside class="col-2 bg-dark text-white vh-100 p-3">
+            <h3>DevCollab</h3>
+            <ul class="nav flex-column mt-4">
+                <li class="nav-item"><a class="nav-link text-white" href="/admin/dashboard">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link text-white active" href="/admin/manage">User Management</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/admin/user-reports">Reported User</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/admin/project-reports">Reported Project</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/admin/user-logs">System Log</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="#">Settings</a></li>
             </ul>
         </aside>
 
