--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -14,8 +14,9 @@
             <ul class="nav flex-column mt-4">
                 <li class="nav-item"><a class="nav-link text-white" href="/admin/dashboard">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link text-white active" href="/admin/manage">User Management</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="#">Reported Project</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="#">Performance</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/admin/user-reports">Reported User</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/admin/project-reports">Reported Project</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/admin/user-logs">System Log</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="#">Settings</a></li>
             </ul>
         </aside>
