them code view all task cua user va loc task theo project va status cua task

--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -12,8 +12,8 @@
          class="flex items-center gap-3 px-6 py-3 bg-indigo-50 text-indigo-700 font-medium rounded-r-full">
         <i class="fa-regular fa-clipboard text-indigo-600 w-5"></i> Project
       </a>
-      <a href="#" class="flex items-center gap-3 px-6 py-3 hover:bg-slate-100 text-slate-600">
-        <i class="fa-regular fa-folder-open w-5"></i> Tasks
+      <a href="/user/view/tasks" class="flex items-center gap-3 px-6 py-3 hover:bg-slate-100 text-slate-600">
+        <i class="fa-regular fa-folder-open w-5"></i> My Tasks
       </a>
       <a href="#" class="flex items-center gap-3 px-6 py-3 hover:bg-slate-100 text-slate-600">
         <i class="fa-regular fa-clock w-5"></i> Work Logs
