--- a/src/main/resources/templates/auth/verify-otp.html
+++ b/src/main/resources/templates/auth/verify-otp.html
@@ -178,7 +178,7 @@
               window.location.href = '/view/reset-password';
             } else {
               console.log('🏠 Chuyển sang /view/home (mode thường)');
-              window.location.href = '/view/home';
+              window.location.href = 'user/view/profile';
             }
 
             localStorage.removeItem('verify_mode');
