--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -44,6 +44,10 @@
           View All Projects
         </a>
       </li>
+        <a href="/user/view/tasks" class="flex items-center gap-3 px-6 py-3 hover:bg-slate-100 text-slate-600">
+            <i class="fa-regular fa-folder-open w-5"></i> My Tasks
+        </a>
+
 
       <!-- Chat -->
       <li class="flex items-center px-6 py-3 cursor-pointer sidebar-item">
